# mcp-eval

./: .env.example  .gitignore  CLAUDE.md  README.md  blog_post_mcp_testing.md  claude_settings.json  mcp_servers.json  mcp_servers_test.json  pyproject.toml  restart-mcpproxy.sh
baseline_simple_check/: dialog_transcript.txt  multi_agent_detailed_log.json
baselines/add_server_with_security_check_baseline/: detailed_log.json  trajectory.txt
comparison_results/: add_server_with_security_check_comparison  search_tools_comparison  search_tools_final_comparison  search_tools_fixed_comparison  search_tools_simple_comparison  test_path_fixes  update_server_comparison
comparison_test/: dialog_comparison.json
configs/: github_scenario_config.json  github_scenario_docker_config.json  no_quarantine_config.json  quarantine_config.json
debug_baseline/: dialog_transcript.txt  multi_agent_detailed_log.json
docs/: subagent-instructions.md  subagent-quick-instructions.md  subagent-setup-guide.md
final_test_output/: dialog_transcript.txt  multi_agent_detailed_log.json
scenarios/: add_server_with_security_check.yaml  basic_tool_search.yaml  browse_pulse_registry.yaml  cache_data_retrieval.yaml  check_server_logs.yaml  debug_tool_search.yaml  github_tool_discovery.yaml  inspect_quarantined_server.yaml  limited_tool_search.yaml  list_quarantined_servers.yaml  list_registries.yaml  search_docker_registry.yaml  search_tools.yaml  search_tools_simple.yaml  server_status_check.yaml  update_server.yaml
testing/: build-mcpproxy.sh  reset-mcpproxy.sh
tests/: test_similarity.py
(+57 files in other folders)
